--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "pixi.js": "^8.14.3",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "typescript-language-server": "^5.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
